--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^4.0",
         "symfony/lts": "^4@dev",
-        "symfony/monolog-bundle": "^3.1",
+        "symfony/maker-bundle": "^1.0",
+        "symfony/orm-pack": "^1.0",
         "symfony/profiler-pack": "^1.0",
         "symfony/translation": "^4.0",
         "symfony/twig-bundle": "^4.0",
